--- a/package.json
+++ b/package.json
@@ -12,6 +12,15 @@
     "lint:fix": "yarn lint --fix",
     "commitlint": "commitlint --from=master --to=HEAD"
   },
+  "lint-staged": {
+    "*.{ts,js}": "eslint --fix"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
@@ -20,6 +29,8 @@
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.1.7",
     "prettier": "^2.0.5",
     "typescript": "^3.8.3"
   }
