--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node lib/index.js",
     "build": "tsc",
     "watch": "tsc --watch",
+    "test": "jest",
     "lint": "eslint --ignore-path .gitignore '**/*.{ts,js}'",
     "lint:fix": "yarn lint --fix",
     "commitlint": "commitlint --from=master --to=HEAD"
@@ -24,14 +25,17 @@
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
+    "@types/jest": "^25.2.1",
     "@typescript-eslint/eslint-plugin": "^2.29.0",
     "@typescript-eslint/parser": "^2.29.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
     "husky": "^4.2.5",
+    "jest": "^25.4.0",
     "lint-staged": "^10.1.7",
     "prettier": "^2.0.5",
+    "ts-jest": "^25.4.0",
     "typescript": "^3.8.3"
   }
 }
